--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,17 +1,19 @@
-$lightblue: #beebf3; //#9ae0ec;
-$green: #2ed16f; //#4cd884;
+$lightblue: #74c0fc; //#7ed7e7; //#beebf3; //#9ae0ec;
+$yellow: #fab005;
+$green: #63e6be; //#4cd884;
 $blue: #2a3970;
 $darkBlue: #1b284a;
 $purple: #4f4686;
 $lightPurple: #7e5da6;
-$lighterPurple: #cabddb;
-$pink: #f24d7f;
+$lighterPurple: #a38cc0;
+$colorPink: #ed789b;
+$colorPinkLight: #f688a9;
 $darkGrey: #22242d;
-$lightGrey: #808080;
+$lightGrey: #a3afdc; //#808080;
 $lightestGrey: #f9f9f9; //#f5f6f9; //#eff1f5;
 
-$textColor: #404959;
-$textColorDark: #15191e;
+$textColor: $darkBlue; //#404959;
+$textColorDark: $darkBlue; //#15191e;
 $borderColor: #d5d8dd;
 $borderColorDark: #393e46;
 $linkColor: #1994e6;
@@ -47,7 +49,7 @@ h3,
 h4,
 h5 {
   font-weight: bold;
-  letter-spacing: 0.4px;
+  // letter-spacing: 0.4px;
   color: $textColor;
 }
 ol,
@@ -103,8 +105,8 @@ a,
 //header
 nav {
   padding: 1rem $sectionPadding;
-  background: $darkBlue;
-  background: $lightestGrey;
+  // background: $darkBlue;
+  // background: $lightestGrey;
   ul {
     display: flex;
     align-items: center;
@@ -115,21 +117,21 @@ nav {
   }
 }
 .subheader {
-  // background: $lightestGrey;
-  background: $blue;
-  // background: $lightblue;
+  background: $lightestGrey;
+  // background: $blue;
+  //background: $lightblue;
   padding: 3rem $sectionPadding;
   h1 {
     font-size: 1.8rem;
-    //color: $textColor;
-    color: #fff;
+    color: $textColor;
+    // color: #fff;
   }
 }
 
 //main
 main {
   padding-top: 4rem;
-  min-height: 700px;
+  min-height: 900px;
   .btn {
     margin: 2.5rem 0;
   }
@@ -138,41 +140,86 @@ main {
     border-bottom: 1px solid $borderColor;
     max-width: 600px;
   }
-  ul {
+  .project-list {
+    display: flex;
+    flex-wrap: wrap;
     max-width: 600px;
+    margin-top: 3rem;
   }
   .list-item {
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    align-items: center;
-    padding: 2rem 2.5rem;
+    // align-items: center;
+    padding: 1.5rem;
     border-radius: $themeBorderRadius;
-    // background: $lighterPurple;
-    background: $lightPurple;
-    margin-bottom: 0.5rem;
+    //background: $lighterPurple;
+    // background: $lightPurple;
+    background: $colorPink;
+    background: $yellow;
     box-shadow: $themeBoxShadowLight;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+    height: 14rem;
+    width: 17rem;
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+    &.empty {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      .icon_btn {
+        font-size: 1.8rem;
+      }
+    }
+    .icons {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
     a {
-      color: #fff;
-      // color: $textColor;
-      font-size: 1rem;
+      //color: #fff;
+      color: $textColorDark;
+      color: $darkBlue;
+      font-weight: 700;
+      font-size: 1.2rem;
+      text-align: center;
     }
     .icon_btn {
       border: none;
       background: transparent;
-      color: #fff;
-      // color: $textColor;
+      color: $textColorDark;
+      margin-left: 0.5rem;
     }
     &:nth-of-type(2) {
-      // background: $lightblue; //$blue;
-      background: $blue;
+      background: $lightblue;
+      //background: $blue;
+    }
+    &:nth-of-type(1) {
+      background: $lightestGrey;
+      border: dashed 2px $lightGrey;
+      //background: $blue;
+    }
+    &:nth-of-type(3) {
+      background: $green;
+      //background: $blue;
+    }
+
+    footer {
+      background: transparent;
+      text-align: center;
     }
   }
 }
 
 //footer
-footer {
+.footer {
   padding: 2rem $sectionPadding;
   background: $darkGrey;
+  background: $darkBlue;
   color: #fff;
   .footer-link-container {
     // margin-left: 10%;
