--- a/styles/styles.css
+++ b/styles/styles.css
@@ -116,17 +116,14 @@ main h2 {
 main .project-list {
   display: flex;
   flex-wrap: wrap;
-  max-width: 600px;
   margin-top: 3rem;
 }
 main .list-item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: 1.5rem;
+  padding: 1.4rem 1.4rem 1rem 1.4rem;
   border-radius: 12px;
-  background: #ed789b;
-  background: #fab005;
   box-shadow: 0px 7px 15px -3px rgba(0, 0, 0, 0.1);
   margin-right: 1rem;
   margin-bottom: 1rem;
@@ -136,7 +133,7 @@ main .list-item {
 main .list-item header {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 main .list-item.empty {
   display: flex;
@@ -146,17 +143,25 @@ main .list-item.empty {
 main .list-item.empty .icon_btn {
   font-size: 1.8rem;
 }
+main .list-item a.title {
+  color: #1b284a;
+  color: #1b284a;
+  font-weight: 700;
+  font-size: 1.2rem;
+}
 main .list-item .icons {
   display: flex;
   justify-content: flex-end;
   align-items: center;
 }
-main .list-item a {
-  color: #1b284a;
-  color: #1b284a;
-  font-weight: 700;
-  font-size: 1.2rem;
-  text-align: center;
+main .list-item .icons-extended {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main .list-item .icons-extended span {
+  font-weight: 600;
+  font-size: 0.9rem;
 }
 main .list-item .icon_btn {
   border: none;
@@ -164,24 +169,36 @@ main .list-item .icon_btn {
   color: #1b284a;
   margin-left: 0.5rem;
 }
-main .list-item:nth-of-type(2) {
-  background: #74c0fc;
-}
 main .list-item:nth-of-type(1) {
   background: #f9f9f9;
   border: dashed 2px #a3afdc;
 }
+main .list-item:nth-of-type(2) {
+  background: #74c0fc;
+}
 main .list-item:nth-of-type(3) {
   background: #63e6be;
+}
+main .list-item:nth-of-type(4) {
+  background: #ed789b;
+  background: #fab005;
+}
+main .list-item:nth-of-type(5) {
+  background: #ed789b;
+}
+main .list-item .props li {
+  padding: 3px 0;
+  line-height: 22px;
 }
 main .list-item footer {
   background: transparent;
   text-align: center;
+  padding: 0.5rem 0 0 0;
+  border-top: 1px solid #1b284a;
 }
 
 .footer {
   padding: 2rem 4%;
-  background: #22242d;
   background: #1b284a;
   color: #fff;
 }
